lodash + random palette

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         
         <ui-view name="main"></ui-view>
 
+        <script src="app/vendors/lodash/lodash.js"></script>
         <script src="app/vendors/angular/angular.min.js"></script>
         <script src="app/vendors/angular-ui-router/angular-ui-router.min.js"></script>
         <script src="app/vendors/angular-aria/angular-aria.min.js"></script>
