add suffix state to all states + sessionService + fix: typo in palettes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
 
-        <mp-userbar></mp-userbar>
+        <mp-userbar ng-if="user.isLoggedIn"></mp-userbar>
         
         <ui-view name="main"></ui-view>
 
