--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-controller="appController">
+<html ng-controller="AppController">
     <head>
         <meta charset="UTF-8">
 
