--- a/app/core/directives/sidebar/Sidebar.html
+++ b/app/core/directives/sidebar/Sidebar.html
@@ -1,12 +1,37 @@
- <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
-    <md-list class="muppet-list">
-        <md-item>
-            <md-item-content>
-                Lorem Ipsum
-                <md-button>
-                    <img ng-src="http://placehold.it/100x100" class="face" alt="">
-                </md-button>
-            </md-item-content>
+<md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+    <md-toolbar class="md-tall md-hue-2">
+        <span flex></span>
+        <div layout="column" class="md-toolbar-tools-bottom inset">
+            <img ng-src="{{ user.avatar }}" class="face" alt="">
+            <span></span>
+            <div>{{ user.name }}</div>
+            <div>{{ user.email }}</div>
+        </div>
+    </md-toolbar>
+
+    <md-list>
+        <md-item ng-repeat="item in menu">
+            <a>
+                <md-item-content md-ink-ripple layout="row" layout-align="start center">
+                    <div class="inset">
+                        <ng-md-icon icon="{{ item.icon }}"></ng-md-icon>
+                    </div>
+                    <div class="inset">{{ item.title }}</div>
+                </md-item-content>
+            </a>
+        </md-item>
+
+        <md-divider></md-divider>
+        <md-subheader>Management</md-subheader>
+        <md-item ng-repeat="item in admin">
+            <a>
+                <md-item-content md-ink-ripple layout="row" layout-align="start center">
+                    <div class="inset">
+                        <ng-md-icon icon="{{ item.icon }}"></ng-md-icon>
+                    </div>
+                    <div class="inset">{{ item.title }}</div>
+                </md-item-content>
+            </a>
         </md-item>
     </md-list>
 </md-sidenav>
