--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
         <link href="app/vendors/angular-material/angular-material.min.css" rel="stylesheet" type="text/css">
     </head>
 
-    <body>
+    <body layout="row">
 
-        <mp-userbar ng-if="user.isLoggedIn"></mp-userbar>
-        
-        <ui-view name="main"></ui-view>
+        <ui-view name="app" layout="column" layout-filll ayout-padding></ui-view>
 
         <script src="app/vendors/lodash/lodash.js"></script>
         <script src="app/vendors/angular/angular.min.js"></script>
