nightly router repair

--- a/app/core/states/app/AppState.html
+++ b/app/core/states/app/AppState.html
@@ -1,8 +1,8 @@
-<ui-view name="session" layout="column" layout-fill layout-padding></ui-view>
+<div layout="row">
+    <div layout="column">
+        <mp-sidebar></mp-sidebar>
+    </div>
 
-<div>
-    <mp-sidebar></mp-sidebar>
-            
     <div layout="column" class="relative" layout-fill role="main">
 
         <md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="showAdd($event)">
