--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
         <link href="app/vendors/angular-material/angular-material.min.css" rel="stylesheet" type="text/css">
     </head>
 
-    <body layout="row">
-
-        <ui-view name="app" layout="column" layout-filll ayout-padding></ui-view>
+    <body>
+        <ui-view name="app" layout="column" layout-fill layout-padding></ui-view>
 
         <script src="app/vendors/lodash/lodash.js"></script>
         <script src="app/vendors/angular/angular.min.js"></script>
