--- a/app/core/directives/sidebar/Sidebar.html
+++ b/app/core/directives/sidebar/Sidebar.html
@@ -10,7 +10,7 @@
     </md-toolbar>
 
     <md-list>
-        <md-item ng-repeat="item in menu">
+        <md-item ng-repeat="item in sidemenu">
             <a>
                 <md-item-content md-ink-ripple layout="row" layout-align="start center">
                     <div class="inset">
@@ -22,8 +22,8 @@
         </md-item>
 
         <md-divider></md-divider>
-        <md-subheader>Management</md-subheader>
-        <md-item ng-repeat="item in admin">
+        <md-subheader>Dalsze menu</md-subheader>
+        <md-item ng-repeat="item in sidemenu">
             <a>
                 <md-item-content md-ink-ripple layout="row" layout-align="start center">
                     <div class="inset">
