--- a/app/core/directives/userbar/Userbar.html
+++ b/app/core/directives/userbar/Userbar.html
@@ -5,7 +5,7 @@
                 <ng-md-icon icon="menu"></ng-md-icon>
             </md-button>
 
-            <h3>Dashboard</h3>
+            <h3>Playlista</h3>
             <span flex></span>
 
             <md-button aria-label="Search" ng-click="showSearch = !showSearch">
@@ -16,14 +16,6 @@
                 <ng-md-icon icon="more_vert"></ng-md-icon>
             </md-button>
         </div>
-        <md-tabs md-stretch-tabs class="md-primary" md-selected="data.selectedIndex">
-          <md-tab id="tab1" aria-controls="tab1-content">
-            Latest
-          </md-tab>
-          <md-tab id="tab2" aria-controls="tab2-content">
-            Favorites
-          </md-tab>
-        </md-tabs>
     </md-toolbar>
 
     <md-toolbar class="md-hue-1" ng-show="showSearch">
