--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <ui-view name="app" layout="column" layout-fill layout-padding></ui-view>
+        <ui-view name="app" layout="row" layout-fill></ui-view>
 
         <script src="app/vendors/lodash/lodash.js"></script>
         <script src="app/vendors/angular/angular.min.js"></script>
