--- a/app/core/directives/userbar/Userbar.html
+++ b/app/core/directives/userbar/Userbar.html
@@ -1,42 +1,10 @@
-<div>
-    <md-toolbar ng-show="!showSearch">
-        <div class="md-toolbar-tools">
-            <md-button ng-click="toggleSidenav('left')" hide-gt-md aria-label="Menu">
-                <ng-md-icon icon="menu"></ng-md-icon>
-            </md-button>
+<md-toolbar layout="row" class="md-hue-3">
+    <div class="md-toolbar-tools">
+        <button class="md-button md-default-theme" ng-transclude="" ng-click="toggleSidenav('left')" hide-gt-md="" aria-label="Menu" tabindex="0">
+            <ng-md-icon icon="menu" class="ng-scope"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path d="M3 18h18v-2H3v2z"></path><path d="M3 13h18v-2H3v2z"></path><path d="M3 6v2h18V6H3z"></path></svg></ng-md-icon>
+        </button>
 
-            <h3>Playlista</h3>
-            <span flex></span>
-
-            <md-button aria-label="Search" ng-click="showSearch = !showSearch">
-                <ng-md-icon icon="search"></ng-md-icon>
-            </md-button>
-
-            <md-button aria-label="Open Settings" ng-click="showListBottomSheet($event)">
-                <ng-md-icon icon="more_vert"></ng-md-icon>
-            </md-button>
-        </div>
-    </md-toolbar>
-
-    <md-toolbar class="md-hue-1" ng-show="showSearch">
-        <div class="md-toolbar-tools">
-            <md-button ng-click="showSearch = !showSearch" aria-label="Back">
-                <ng-md-icon icon="arrow_back"></ng-md-icon>
-            </md-button>
-
-            <h3 flex="10">Back</h3>
-            <md-input-container md-theme="input" flex>
-                <label>&nbsp;</label>
-                <input ng-model="search.who" placeholder="enter search">
-            </md-input-container>
-
-            <md-button aria-label="Search" ng-click="showSearch = !showSearch">
-                <ng-md-icon icon="search"></ng-md-icon>
-            </md-button>
-            
-            <md-button aria-label="Open Settings" ng-click="showListBottomSheet($event)">
-                <ng-md-icon icon="more_vert"></ng-md-icon>
-            </md-button>
-        </div>
-    </md-toolbar>
-</div>
+        <h3>Playlist</h3>
+        <span flex=""></span>
+    </div>
+</md-toolbar>
